--- a/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
+++ b/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
@@ -154,6 +154,107 @@
     "\n",
     "print(add(10, 20))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eğer 3 parametre göndermeye kalkarsak\n",
+    "def add(a, b, c):     \n",
+    "    return sum((a, b, c))\n",
+    "\n",
+    "print(add(10, 20, 30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "<function add at 0x000001A12BBE99E0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 parametre isterken 2 parametre girersek hata vermesin diye...\n",
+    "\n",
+    "def add(a, b, c = 0):    # c için sayı girmezsek c yi 0 kabul eder.\n",
+    "    return sum([a, b, c])   # 2 den fazla parametre için burda sum fonksiyonuyla alakalı hata olmaması için [] içine almak lazımmış extra\n",
+    "\n",
+    "print(add(10, 20))\n",
+    "print(add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# parametreleri artırabiliriz\n",
+    "\n",
+    "def add(a, b, c = 0, d = 0, e = 0):  # 5 parametreden istediğimiz kadarını kullanabiliriz.\n",
+    "    return sum([a, b, c, d, e])\n",
+    "\n",
+    "print(add(10, 20))\n",
+    "print(add(10, 20, 30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "60\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "# peki 6 parametre göndermek istersek ne yapıcaz.\n",
+    "\n",
+    "def add(*params):\n",
+    "    return sum((params))\n",
+    "\n",
+    "print(add(10, 20))\n",
+    "print(add(10, 20, 30))\n",
+    "print(add(10, 20, 30, 40, 50 , 60, 100))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# video 9.51 de kaldık"
+   ]
   }
  ],
  "metadata": {
