--- a/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
+++ b/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "60\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
      "output_type": "stream",
      "text": [
       "30\n",
-      "<function add at 0x000001A12BBE99E0>\n"
+      "<function add at 0x000002AA298B0220>\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -242,18 +242,209 @@
    "source": [
     "# peki 6 parametre göndermek istersek ne yapıcaz.\n",
     "\n",
-    "def add(*params):\n",
-    "    return sum((params))\n",
+    "def add(*params):       # burada (*) işareti önüne gelen şeyi tuple nesnesi olarak paketliyor\n",
+    "    return sum((params))  # bu nedenle ne kadar parametre olduğu önemli olmuyor.\n",
     "\n",
     "print(add(10, 20))\n",
     "print(add(10, 20, 30))\n",
-    "print(add(10, 20, 30, 40, 50 , 60, 100))\n",
+    "print(add(10, 20, 30, 40, 50 , 60, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 30)\n",
+      "60\n",
+      "(10, 20, 30, 50, 60)\n",
+      "170\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gönderdiğimiz argumanların ne olduğunu ekrana göstersin yazsın\n",
+    "\n",
+    "def add(*params):      \n",
+    "    print(params)       # gönderdiğimiz tüm argumanlar ekrana yazdırılır (tuple listesi halinde)\n",
+    "    return sum((params))\n",
+    "\n",
+    "print(add(10, 20, 30))      # gönderdiğimiz argumanlar bunlar oluyor\n",
+    "print(add(10, 20, 30, 50, 60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gönderdiğimiz argumanların listesinden istediğimiz indexe ulaşabilip yazdırabiliriz\n",
+    "def add(*params):      \n",
+    "    print(params[0])      # gönderilen argumanların 0. indexi yani ilk sayı  \n",
+    "    print(params[2])            # 2. indexini de yazdırsın\n",
+    "    return sum((params))\n",
+    "\n",
+    "print(add(10, 20, 30))     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum fonksiyonu kullanmak isteMEZsek\n",
+    "\n",
+    "def add(*params):\n",
+    "    sum = 0\n",
+    "    for n in params:\n",
+    "        sum = sum + n\n",
+    "    return sum\n",
+    "\n",
+    "print(add(10, 20, 30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name is Çınar\n",
+      "age is 2\n",
+      "city is Istanbul\n",
+      "name is Ada\n",
+      "age is 12\n",
+      "city is Kocaeli\n",
+      "phone is 123456789\n",
+      "name is Yiğit\n",
+      "age is 14\n",
+      "city is Ankara\n",
+      "phone is 1234543543\n",
+      "email is yigit06@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bilgileri fonksiyona nasıl göndericez\n",
     "\n",
     "\n",
+    "def displayUser(**args):  # tuple değilde dictionary (key-value) şeklinde olacağını program bilsin diye iki yıldız (**) kullanıyoruz\n",
+    "    for key, value in args.items():   # args'a aşağıda name = çınar, age = 2 gibisinden şeyler vereceğimiz için (key value) for döngüsünde dönmesi için .items metodu ile alınması lazım . .items modulu tuple olarak alıyor şöyle : (key,value),(key,value) . for döngüsü tanıyamaz yoksa\n",
+    "        print('{} is {}'.format(key, value)) # .format modülü ilk süslü paranteze normal parantezin içindeki ilk şeyi . ikinci süslüye ikinci normal parantezin içindekini atıyor.\n",
     "\n",
+    "displayUser(name= 'Çınar', age= 2, city= 'Istanbul')\n",
+    "displayUser(name= 'Ada', age= 12, city= 'Kocaeli', phone= '123456789')\n",
+    "displayUser(name= 'Yiğit', age= 14, city= 'Ankara', phone= '1234543543', email= 'yigit06@gmail.com')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "name is Çınar\n",
+      "age is 2\n",
+      "city is Istanbul\n",
+      "<class 'dict'>\n",
+      "name is Ada\n",
+      "age is 12\n",
+      "city is Kocaeli\n",
+      "phone is 123456789\n",
+      "<class 'dict'>\n",
+      "name is Yiğit\n",
+      "age is 14\n",
+      "city is Ankara\n",
+      "phone is 1234543543\n",
+      "email is yigit06@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "# yukarıdaki gönderdiğimiz args bilgisinin tipini sorgulayalım\n",
     "\n",
+    "def displayUser(**args):  \n",
+    "    print(type(args))                   # class <dict> der dictionari imiş \n",
+    "    for key, value in args.items():  \n",
+    "        print('{} is {}'.format(key, value)) \n",
     "\n",
-    "# video 9.51 de kaldık"
+    "displayUser(name= 'Çınar', age= 2, city= 'Istanbul')\n",
+    "displayUser(name= 'Ada', age= 12, city= 'Kocaeli', phone= '123456789')\n",
+    "displayUser(name= 'Yiğit', age= 14, city= 'Ankara', phone= '1234543543', email= 'yigit06@gmail.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#    *args = tuple listesi olarak gönderir\n",
+    "#    **args = bir dictionary (key, value) listesi olarak gönderir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "(30, 40, 50)\n",
+      "{'key1': 'value 1', 'key2': 'value 2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# normal liste ve key, value listeyi aynı fonksiyonlar göndermek istersek\n",
+    "\n",
+    "def myFunc(a, b, *args, **kwargs):\n",
+    "    print(a)\n",
+    "    print(b)\n",
+    "    print(args)\n",
+    "    print(kwargs)\n",
+    "\n",
+    "myFunc(10, 20, 30, 40, 50, key1 = 'value 1', key2 = 'value 2')\n",
+    "\n",
+    "# key value şeklinde olanı kwargs kısmının oldu. tuple olarak aldı.\n",
+    "# a ilk bilgi olan 10 u aldı\n",
+    "# b ikinci bilgi olan 20 yi aldı.\n",
+    "# geri kalanı yani 30 40 50 yi args aldı otomatik."
    ]
   }
  ],
