nesne tabanlı programlamaya giriş yaptım

--- a/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
+++ b/7 ] Python da Fonksiyonlar/3) Fonksiyon Parametreleri.ipynb
@@ -178,15 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "<function add at 0x000002AA298B0220>\n"
+      "30\n"
      ]
     }
    ],
@@ -196,8 +195,7 @@
     "def add(a, b, c = 0):    # c için sayı girmezsek c yi 0 kabul eder.\n",
     "    return sum([a, b, c])   # 2 den fazla parametre için burda sum fonksiyonuyla alakalı hata olmaması için [] içine almak lazımmış extra\n",
     "\n",
-    "print(add(10, 20))\n",
-    "print(add)"
+    "print(add(10, 20))"
    ]
   },
   {
@@ -243,7 +241,7 @@
     "# peki 6 parametre göndermek istersek ne yapıcaz.\n",
     "\n",
     "def add(*params):       # burada (*) işareti önüne gelen şeyi tuple nesnesi olarak paketliyor\n",
-    "    return sum((params))  # bu nedenle ne kadar parametre olduğu önemli olmuyor.\n",
+    "    return sum((params))  # bu nedenle ne kadar parametre olduğu önemli olmuyor. o nedenle de [] içine almaya gerek kalmıyor bence\n",
     "\n",
     "print(add(10, 20))\n",
     "print(add(10, 20, 30))\n",
