--- a/7 ] Python da Fonksiyonlar/4) Fonksiyon uygulama.ipynb
+++ b/7 ] Python da Fonksiyonlar/4) Fonksiyon uygulama.ipynb
@@ -65,13 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def asalBul(a, b):\n",
-    "    for sayi in range(a, b+1)  # b 'yi de dahil etsin diye +1 çaktık\n",
+    "    for sayi in range(a, b+1):  # b 'yi de dahil etsin diye +1 çaktık\n",
     "        if sayi > 1:\n",
     "            for i in range(2, sayi):\n",
     "                if (sayi % i == 0):\n",
@@ -82,7 +90,7 @@
     "a = int(input('sayi1: '))\n",
     "b = int(input('sayi2: '))\n",
     "\n",
-    "asalBul(a, b=)\n",
+    "asalBul(a, b)\n",
     "   "
    ]
   },
