--- a/7 ] Python da Fonksiyonlar/6) Scope Global & Local Değişkenler .ipynb
+++ b/7 ] Python da Fonksiyonlar/6) Scope Global & Local Değişkenler .ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
     "greeting()\n",
     "\n",
     "# içerideki iki name tanımlamasını da kaldırırsak global olan name 'i seçer fonksiyon.\n",
-    "# sadece hello fonksiyonunun içindeki name değişkenini silersek bu sefer name 'Ada' global olarak kabul edilir"
+    "# sadece hello fonksiyonunun içindeki name değişkenini silersek bu sefer name 'Ada' global olarak kabul edilir (bu cümlede hata olabilir)"
    ]
   },
   {
@@ -268,17 +268,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x : 50 \n",
+      "changed x to 100\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "x = 50\n",
     "def test():\n",
-    "    global x\n",
-    "    print(f'x : {x}')\n",
+    "    global x                # global x üzerine fonksiyon içinde yapılan her işlem dışarıdaki o x e yapılmış oluyor çünkü global olarak tanım ekledik anladın sen.\n",
+    "    print(f'x : {x} ')\n",
     "\n",
     "    x = 100\n",
-    "    print(f'f')"
+    "    print(f'changed x to {x}')\n",
+    "\n",
+    "test()\n",
+    "print(x)"
    ]
   }
  ],
