--- a/7 ] Python da Fonksiyonlar/5) Lambda Expressions, Map ve Filter.ipynb
+++ b/7 ] Python da Fonksiyonlar/5) Lambda Expressions, Map ve Filter.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,8 @@
    ],
    "source": [
     "numbers = [1, 3, 5, 9]\n",
+    "def square(num):\n",
+    "    return num ** 2\n",
     "\n",
     "for item in map(square, numbers):\n",
     "    print(item)"
