hata nesnesi oluşturma bitti

--- a/10 ] Hata ve Hata Yönetimi/3) Hata Nesnesi Oluşturma.ipynb
+++ b/10 ] Hata ve Hata Yönetimi/3) Hata Nesnesi Oluşturma.ipynb
@@ -89,11 +89,41 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "            video: 3:30"
+    "# re modülünün özelliklerini kullanıcaz\n",
+    "def check_password(psw):\n",
+    "    import re\n",
+    "    if len(psw) < 8:\n",
+    "        raise Exception(\"parola en az 7 karakter olmalıdır\")\n",
+    "    elif not re.search(\"[a-z]\", psw):       \n",
+    "        raise Exception(\"parola küçük harf içermelidir\")\n",
+    "    elif not re.search(\"[A-Z]\", psw):       \n",
+    "        raise Exception(\"parola büyük harf içermelidir\")\n",
+    "    elif not re.search(\"[0-9]\", psw):       \n",
+    "        raise Exception(\"parola rakam içermelidir\")\n",
+    "    elif not re.search(\"[_@$]\", psw):       \n",
+    "        raise Exception(\"parola alpha numeric karakter içermelidir\")\n",
+    "    elif re.search(\"\\s\", psw):   # boşluk karakterini regular expressionda \\s ile belirtiyoruz\n",
+    "        raise Exception(\"parola boşluk içermemelidir\")\n",
+    "    else:\n",
+    "        print(\"geçerli parola\")\n",
+    "\n",
+    "password = '12345678aB@'        # kullanıcının girdiği parola burada\n",
+    "\n",
+    "\n",
+    "\n",
+    "# kontrolunu aşağıda yapıyoruz. yukarıda sadece bu olmazsa hangi hata verilecek kararlaştırıldı\n",
+    "# aşağıda ise hatanın verilmesi\n",
+    "try:\n",
+    "    check_password(password)\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "else:\n",
+    "    print(\"geçerli parola: else \")"
    ]
   }
  ],
