hata nesnesi oluşturma bitti

--- a/10 ] Hata ve Hata Yönetimi/3) Hata Nesnesi Oluşturma.ipynb
+++ b/10 ] Hata ve Hata Yönetimi/3) Hata Nesnesi Oluşturma.ipynb
@@ -90,9 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geçerli parola\n",
+      "geçerli parola: else \n",
+      "validation tamamlandı\n"
+     ]
+    }
+   ],
    "source": [
     "# re modülünün özelliklerini kullanıcaz\n",
     "def check_password(psw):\n",
@@ -123,7 +133,46 @@
     "except Exception as ex:\n",
     "    print(ex)\n",
     "else:\n",
-    "    print(\"geçerli parola: else \")"
+    "    print(\"geçerli parola: else \")\n",
+    "finally:\n",
+    "    print(\"validation tamamlandı\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* peki başka nerelerde kullanabiliriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "name alanı fazla karakter içeriyor.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[39melse\u001b[39;00m:       \u001b[39m# eğer geçerli bir bilgi ise aşağıda set et (tanımla) demek\u001b[39;00m\n\u001b[0;32m      6\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m name\n\u001b[1;32m----> 8\u001b[0m p \u001b[39m=\u001b[39m Person(\u001b[39m\"\u001b[39;49m\u001b[39mAliiiiiiiiiiiiii\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m1899\u001b[39;49m)  \u001b[39m# 10 karakterden büyük\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m, in \u001b[0;36mPerson.__init__\u001b[1;34m(self, name, year)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, name, year):\n\u001b[0;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(name) \u001b[39m>\u001b[39m \u001b[39m10\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mname alanı fazla karakter içeriyor.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39melse\u001b[39;00m:       \u001b[39m# eğer geçerli bir bilgi ise aşağıda set et (tanımla) demek\u001b[39;00m\n\u001b[0;32m      6\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m name\n",
+      "\u001b[1;31mException\u001b[0m: name alanı fazla karakter içeriyor."
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, year):\n",
+    "        if len(name) > 10:\n",
+    "            raise Exception(\"name alanı fazla karakter içeriyor.\")\n",
+    "        else:       # eğer geçerli bir bilgi ise aşağıda set et (tanımla) demek\n",
+    "            self.name = name\n",
+    "\n",
+    "p = Person(\"Aliiiiiiiiiiiiii\", 1899)  # 10 karakterden büyük"
    ]
   }
  ],
